--- a/src/Makefile
+++ b/src/Makefile
@@ -1,12 +1,20 @@
 
 CC = gcc
 
-all: test
+all: test avx2 neon
 
 test: test.c
+	$(CC) $(CLFAGS) $< -o $@
+
+avx2: avx2.c
+	$(CC) $(CLFAGS) $< -o $@
+
+neon: neon.c
 	$(CC) $(CLFAGS) $< -o $@
 
 .PHOYNY: clean
 
 clean:
 	rm -f test
+	rm -f avx2
+	rm -f neon
