--- a/src/Makefile
+++ b/src/Makefile
@@ -1,12 +1,15 @@
 
 CC = gcc
 
-all: test avx2 neon
+all: test avx2_ref neon_ref
 
 test: test.c
 	$(CC) $(CLFAGS) $< -o $@
 
-avx2: avx2.c
+avx2_ref: avx2_ref.c
+	$(CC) $(CLFAGS) $< -o $@
+
+neon_ref: neon_ref.c
 	$(CC) $(CLFAGS) $< -o $@
 
 neon: neon.c
@@ -16,5 +19,6 @@ neon: neon.c
 
 clean:
 	rm -f test
-	rm -f avx2
+	rm -f avx2_ref
+	rm -f neon_ref
 	rm -f neon
