--- a/src/Makefile
+++ b/src/Makefile
@@ -14,33 +14,41 @@ all: test avx2_ref neon_ref armv7e-m_ref
 jazz_x86.s: jazz_x86.jazz
 	$(JASMINC) $< -o $@
 
+jazz_avx2.s: jazz_avx2.jazz
+	$(JASMINC) $< -o $@
+
 test: test.c
-	$(CC) $(CLFAGS) $< -o $@
+	$(CC) $(CFLAGS) $< -o $@
 
 avx2_ref: avx2_ref.c
-	$(CC) $(CLFAGS) $< -o $@
+	$(CC) $(CFLAGS) $< -o $@
 
 avx2: avx2.c
-	$(CC) $(CLFAGS) $(AVX2_FLAGS) $< -o $@
+	$(CC) $(CFLAGS) $(AVX2_FLAGS) $< -o $@
 
 jazz_x86: jazz_x86.c jazz_x86.jazz jazz_x86.s
-	$(CC) $(CLFAGS) jazz_x86.s $< -o $@
+	$(CC) $(CFLAGS) jazz_x86.s $< -o $@
+
+jazz_avx2: jazz_avx2.c jazz_avx2.jazz jazz_avx2.s
+	$(CC) $(AVX2_FAGS) jazz_avx2.s $< -o $@
 
 neon_ref: neon_ref.c
-	$(CC) $(CLFAGS) $< -o $@
+	$(CC) $(CFLAGS) $< -o $@
 
 neon: neon.c
-	$(CC) $(CLFAGS) $(AARCH64_FLAGS) $< -o $@
+	$(CC) $(CFLAGS) $(AARCH64_FLAGS) $< -o $@
 
 armv7e-m_ref: armv7e-m_ref.c
-	$(CC) $(CLFAGS) $< -o $@
+	$(CC) $(CFLAGS) $< -o $@
 
 .PHOYNY: clean
 
 clean:
 	rm -f test
 	rm -f avx2_ref
+	rm -f avx2
+	rm -f jazz_x86
+	rm -f jazz_avx2
 	rm -f neon_ref
 	rm -f neon
 	rm -f armv7e-m_ref
-	rm -f jazz_x86
